# rpc-demo

./: READ.md  client.go  go.mod  go.sum  main.go  server.go
cpp/: client.cc  server.cc
grpc/: README.md  client.go
grpc/cpp/cpp/: CMakeLists.txt
proto/: gen.sh  hello.proto
rpc-protocol/: func.go
